--- a/package.json
+++ b/package.json
@@ -29,13 +29,11 @@
         "npm": "> 3.0.0"
     },
     "devDependencies": {
-        "yargs": "^12.0.2",
-        "transfer-webpack-plugin": "^0.1.4",
-        "glob": "^7.1.3",
         "babel-core": "^6.26.3",
         "babel-eslint": "^8.2.6",
         "babel-loader": "^7.1.5",
         "babel-plugin-external-helpers": "^6.22.0",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-plugin-transform-async-to-module-method": "^6.24.1",
         "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
@@ -62,6 +60,7 @@
         "express": "^4.16.2",
         "file-loader": "^1.1.11",
         "friendly-errors-webpack-plugin": "^1.7.0",
+        "glob": "^7.1.3",
         "html-webpack-plugin": "^3.2.0",
         "http-proxy-middleware": "^0.18.0",
         "mini-css-extract-plugin": "^0.4.1",
@@ -79,6 +78,7 @@
         "semver": "^5.5.0",
         "shelljs": "^0.8.2",
         "style-loader": "^0.23.0",
+        "transfer-webpack-plugin": "^0.1.4",
         "url-loader": "^1.0.1",
         "vue-loader": "^15.4.1",
         "vue-popup": "^0.2.14",
@@ -90,6 +90,7 @@
         "webpack-dev-middleware": "^3.1.3",
         "webpack-dev-server": "^3.1.4",
         "webpack-hot-middleware": "^2.22.2",
-        "webpack-merge": "^4.1.1"
+        "webpack-merge": "^4.1.1",
+        "yargs": "^12.0.2"
     }
 }
