--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "author": "febody",
     "license": "ISC",
     "dependencies": {
+        "assets-webpack-plugin": "^3.9.7",
         "vue": "^2.5.16",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1"
@@ -33,9 +34,9 @@
         "babel-eslint": "^8.2.6",
         "babel-loader": "^7.1.5",
         "babel-plugin-external-helpers": "^6.22.0",
-        "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-plugin-transform-async-to-module-method": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-runtime": "^6.23.0",
