--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "webpack4_demo",
     "version": "1.0.0",
     "description": "webpack4 demo",
+    "service": {
+        "version": "1.0.0",
+        "name": "risk_sw",
+        "scope": "/risk_m/"
+    },
     "main": "index.js",
     "scripts": {
         "start": "BUILD_ENV=dev node build/dev-server.js",
@@ -23,7 +28,8 @@
         "assets-webpack-plugin": "^3.9.7",
         "vue": "^2.5.16",
         "vue-router": "^3.0.1",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "workbox-webpack-plugin": "^3.6.2"
     },
     "engines": {
         "node": "> 8.10.1",
