--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "author": "febody",
     "license": "ISC",
     "dependencies": {
-        "assets-webpack-plugin": "^3.9.7",
         "lodash-es": "^4.17.11",
         "vue": "^2.5.16",
         "vue-router": "^3.0.1",
-        "vuex": "^3.0.1",
-        "workbox-webpack-plugin": "^3.6.2"
+        "vuex": "^3.0.1"
     },
     "engines": {
         "node": "> 8.10.1",
         "npm": "> 3.0.0"
     },
     "devDependencies": {
+        "workbox-webpack-plugin": "^3.6.2",
+        "assets-webpack-plugin": "^3.9.7",
         "babel-core": "^6.26.3",
         "babel-eslint": "^8.2.6",
         "babel-loader": "^7.1.5",
